# okta_oidc

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  export_op_creds  oidc.toml
src/: app_config.rs  config.rs  error.rs  main.rs  otel.rs
src/admin/: mod.rs
src/admin/handlers/: health.rs  index.rs  mod.rs
src/admin/pages/: index.rs
src/app/: mod.rs
src/app/handlers/: auth.rs  index.rs  login.rs  logout.rs  mod.rs
src/app/pages/: index.rs  mod.rs
src/auth/: auth_request.rs  exchange_auth_code.rs  mod.rs  oidc_client.rs
src/common/: mod.rs
src/common/handlers/: default_handler.rs  mod.rs
src/common/pages/: mod.rs  not_found.rs
src/config/: app_config.rs  app_state.rs  mod.rs  oidc_config.rs
src/config/client_creds/: env_creds.rs  keyring_creds.rs  mod.rs
src/handlers/: default_handler.rs  index.rs  login.rs  logout.rs  mod.rs
src/pages/: index.rs  mod.rs  not_found.rs
static/: style.css
static/admin/: style.css
static/app/: style.css
templates/: base.html  index.html  not_found.html
templates/admin/: index.html
templates/app/: index.html
templates/common/: base.html  not_found.html
tls/: minica-key.pem  minica.pem
tls/localhost/: cert.pem  key.pem
