[package]
name = "okta_oidc"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <davidskyberg@gmail.com"]
description = "Demonstrates using Okta for OIDC authentication in a Rust app"
keywords = ["rust", "actix","actix-web", "oidc"]
license = "MIT OR Apache 2.0"
repository = "https://github.com/dskyberg/okta_oidc"

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web = "4.5"
askama ={ version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
dotenv = "0.15"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
openidconnect = { version = "3.5", features = ["reqwest", "native-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
