[package]
name = "okta_oidc"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <davidskyberg@gmail.com"]
description = "Demonstrates using Okta for OIDC authentication in a Rust app"
keywords = ["rust", "actix", "actix-web", "oidc"]
license = "MIT OR Apache 2.0"
repository = "https://github.com/dskyberg/okta_oidc"

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.9", features = ["redis-rs-session"] }
actix-web = "4.5"
anyhow = "1.0"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
openidconnect = { version = "3.5", features = ["reqwest", "native-tls"] }
opentelemetry = { version = "0.22", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = [
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-semantic-conventions = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-attributes = { version = "0.1", features = ["async-await"] }
keyring = { version = "2.3", optional = true }

[features]
default = ["keyring"]
